# EEG-semantic-text-relevance

./: .gitignore  LICENSE  README.md  benchmark.py  generate_figures.py  generate_results.py  prepare.py  pyproject.toml  run_benchmark.sh
src/data_operations/: loader_sentences.py  loader_words.py  misc.py  preparator.py  preprocessor.py
src/misc/: utils.py
src/models/: __init__.py  lstm.py  uercm.py
src/releegance/data_operations/: __init__.py  loader_sentences.py  loader_words.py  misc.py  preparator.py  preprocessor.py
src/releegance/misc/: utils.py
src/releegance/models/: __init__.py  eegnet.py  uercm.py
src/releegance/trainer/: trainer.py
src/trainer/: trainer.py
tests/: test_cold.py
